# steam-deck-robot-controller

./: .gitignore  Makefile  PROTOCOL.md  README.md  demo_server.py  demo_viewer.py  program.prof  pyproject.toml  requirements.txt  run_app.py  test_serial.py
steamdeck_robotcontrol/: __main__.py  screen.py
steamdeck_robotcontrol/persistence/: __init__.py  database.py
steamdeck_robotcontrol/screens/: __init__.py  control.py  generator_screen.py  main_menu.py  menu.py  sample.py  text_input.py
steamdeck_robotcontrol/test/: test_database.py  test_screen.py
